--- a/.github/workflows/openwrt.yml
+++ b/.github/workflows/openwrt.yml
@@ -23,7 +23,7 @@ jobs:
         sudo -E apt-get -qq update > /dev/null 2>&1
         sudo -E apt-get -qq install -y git subversion git-core wget curl grep > /dev/null 2>&1
         sudo timedatectl set-timezone "$TZ"
-        git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git config --global user.name "github-actions[bot]"
           
     - name: 整理文件
