--- a/.github/workflows/update-packages.yml
+++ b/.github/workflows/update-packages.yml
@@ -17,6 +17,7 @@ jobs:
       run: |
         # sudo -E apt-get -y update
         # sudo -E apt-get -y install git subversion git-core wget
+        rm -rfv !(README.md|packages.sh)
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --global user.name "github-actions[bot]"
         
