--- a/.github/workflows/Auto-update.yml
+++ b/.github/workflows/Auto-update.yml
@@ -30,7 +30,7 @@ jobs:
         shopt -s extglob
         rm -rfv !(README.md)
         shopt -u extglob
-        svn export https://github.com/ysx88/compile-kernel/trunk/ ./compile-kernel
+        svn export https://github.com/ysx88/kernel/trunk/ ./kernel
         svn export https://github.com/ysx88/flippy-openwrt-actions/trunk/ ./flippy-openwrt-actions
         svn export https://github.com/ysx88/openwrt-packages/trunk/ ./openwrt-packages
         svn export https://github.com/ysx88/my-packages/trunk/ ./my-packages
